Re-introduce channel button clipping fix

--- a/src/renderer/views/Channel/Channel.css
+++ b/src/renderer/views/Channel/Channel.css
@@ -71,6 +71,10 @@
   justify-content: space-between;
 }
 
+.subscribeButton {
+  block-size: fit-content;
+}
+
 .shareIcon {
   align-self: center;
 }
